samples/_failures_safe/1761612159_f4430f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23bb669b.c: In function ‘main’:
./samples/SAFE/__tmp_23bb669b.c:164:16: error: missing terminating " character
  164 |         printf("
      |                ^
./samples/SAFE/__tmp_23bb669b.c:164:9: error: expected expression at end of input
  164 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_23bb669b.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23bb669b.c:164:9: error: expected declaration or statement at end of input
